Fix dark mode flickering issue

--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@ body {
   transition: background 1s ease, color 1s ease;
 }
 
-body.dark {
+html.dark {
   --light-color: #333232;
   --dark-color: #f5f5f5
 }
